Fix for navabr dropdown not working on mobile

--- a/src/dotnetconfpl/dotnetconfpl/Content/css/site.css
+++ b/src/dotnetconfpl/dotnetconfpl/Content/css/site.css
@@ -83,3 +83,8 @@ a.image-link:hover {
 .last-chance-text {
     font-size: 10px;
 }
+
+/* fix for navbar dropdown not working on mobile */ 
+.dropdown-backdrop {
+    position: static;
+}
